PO-2901: Adding ant targets to PA to enable running of selenium tests. Peer review by slustbader.
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@10720 553898ca-32d5-487a-af8b-6cf4ca579ab4